src/client/test.css
body{
	padding:0;
	margin:0;
	left:0;
	overflow:hidden;
	background-color: black;
	font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
}
h1{
	font-size: 100%;
	background-color: black;
	color: white;
}
p{
	border: 2px solid powderblue;
}

.settings-container{
	display:flex;
	flex-direction:column;
	flex-wrap:nowrap;

	margin:0px;
	padding:0px;

	align-items:center;
	justify-content:center;
	position:absolute;
	height: 100%;
}
.settings-item{
	position: relative;
	font-size: auto;
	font-weight: bolder;
	height: 100%;
	color: #EEEEEE;
	top:0;
	bottom:0;
	padding-top:50%;

	border: 2px solid green;
}

.nav-container{
	display:flex;
	flex-direction:row;
	flex-wrap:nowrap;
	
	position:fixed;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	
	background-color: black;
}
.nav-content{
	flex: 1 1 75%;
	border: none;
	position: relative;
}
.nav-sidebar{
	flex: 1 1 25%;
	background-color: #383838;
	position: relative;
}
.nav-sidebar-active{
	background-color: #484848;
}
.nav-sidebar-item{
	max-height: 100px;

	padding-top: 20px;
	padding-left: 20px;
	padding-bottom: 20px;
}

.nav-sidebar-title{
	font-size: 200%;
	font-weight: bolder;
	color: #EEEEEE;
}
.nav-sidebar-body{
	font-size: 150%;
	color: #CCCCCC;
}
.nav-map{
	position: relative;
	background-color: none;
	height: 200px;
	float: center;
}

.button-floating{
	position: absolute;
	margin: 20px;
	background-color: transparent;
	border: none;
	cursor: pointer;
}

/* toggle slider */

/* .flex-container {
    display: flex;
    align-items: center;
    justify-content: space-between;
	position: relative;
}

.text-size-container{
	position: absolute;
    top: 0;
    right: 0;
}
*/
.toggle-container{
	display: flex;
	flex: 1;
	flex-direction: column;
	flex-wrap: nowrap;
    justify-content: center; 
    align-items: center;
	height: 50vh;
	position: relative;
}

.toggle{
	display: flex;
	flex-direction: row;
	flex-wrap: nowrap;
	align-items: center;
	justify-content: center;

}

.flex-container {
    display: flex;
    align-items: center;
    justify-content: space-between;
    position: relative;
}

.text-size-container {
	display: flex;
	flex: 1;
	align-items: center;
	justify-content: center;
	bottom: 10%;
	flex-direction: column;
	flex-wrap: nowrap;
	position: relative;
}

/* .toggle-container {
    display: flex;
    align-items: center;
}

.toggle {
    position: relative;
    cursor: pointer;
    padding-left: 30px;
} */


label {
	font-size: 600%;
	font-weight: bold;
	color: white;
}

.slider {
    position: relative;
    width: 180px; 
    height: 102px;
	margin-left: 30px;
	background-color: red;
	border-radius: 51px; 
    transition: background-color 0.4s; /* Adding transition effect for smooth color change */
	cursor: pointer;
}

.slider:before {
    position: absolute;
    content: "";
    height: 78px; 
    width: 78px; 
    left: 12px; 
    bottom: 12px; 
    background-color: white; 
    border-radius: 50%; 
	-webkit-transition: .4s;
	transition: .4s;
}

input:checked + .slider {
	background-color: blue;

}

input:checked + .slider:before {
	-webkit-transform: translateX(78px);
	-ms-transform: translateX(78px);
	transform: translateX(78px);
  }

